--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --mode development",
-    "build": "webpack --mode production"
+    "dev": "webpack-dev-server --mode development --open",
+    "build": "webpack --mode=production"
   },
   "keywords": [],
   "author": "",
@@ -23,8 +23,12 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "axios": "^1.3.2",
+    "bootstrap": "^5.2.3",
     "html-webpack-plugin": "^5.5.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-bootstrap": "^2.7.1",
+    "react-dom": "^18.2.0",
+    "webpack-bundle-tracker": "^1.8.1"
   }
 }
