--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,9 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.1",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.1",
+    "swagger-ui": "^4.15.5",
+    "swagger-ui-react": "^4.15.5",
     "webpack-bundle-tracker": "^1.8.1"
   }
 }
